# RustyRailways

./: .gitignore  LICENCE.md  README.md
client/: .gitignore  AddressTextEdit.gd  BackgroundColorChanger.gd  ConnectionStatusTextArea.gd  DebugUI.gd  DebugUI.tscn  DebugVariableView.gd  DebugVariableView.tscn  HTTPIO.gd  Main.gd  Main.tscn  MainCamera.gd  README.md  ReceivingTextPacketsTextArea.gd  WebSocketClient.gd  arrow-headless.png.import  arrow.png.import  export_presets.cfg  logo.png.import  project.godot
common_infrastructure/: Cargo.toml  readme.md
docs/: index.css  index.html
documentation/: index.html
esp8266/: platformio.ini  readme.txt
master/: Cargo.toml  readme.md
master/src/: constants.rs  main.rs
master/src/hal/: message_getter.rs  mod.rs
master/src/high_level_controller/: mod.rs  readme.md
master/src/low_level_controller/: mod.rs
master/src/map/: devices.rs  map_tests.rs  mod.rs  nodes.rs  states.rs
master/src/map/initialization/: init_adjacent_nodes.rs  init_link.rs  init_map.rs  init_node.rs  init_node_status.rs  init_switch_controller_option.rs  init_train_controller.rs  mod.rs
master/src/map/references/: mod.rs  node_ref.rs  switch_ref.rs  train_ref.rs
master/src/map/serde_impls/: ref_serde_impls.rs
master/src/map/views/: map_controller_view.rs  map_creation_view.rs  map_factory.rs  map_navigation_view.rs  map_visualization_view.rs  mod.rs
master/src/path_finder_and_scheduler/: map_navigation_functions.rs  mod.rs  move_recorder.rs  tests.rs
master/src/path_finder_and_scheduler/map_navigation_functions/: path_finder.rs  path_to_intersection.rs  path_to_move_out_of_the_way.rs  path_to_position.rs  path_to_switch_point.rs
train/rust/: .gitignore  Cargo.toml  makefile  readme.md  requirements.txt  rust-toolchain.toml
train/rust/.cargo/: config.toml
train/rust/src/: main.rs
train/rust/src/train_hal/: fnc_reader.rs  message_receiver.rs  message_sender.rs  mod.rs  nfc_reader.rs  speed_setter.rs  wifi_configuration.rs
(+632 files in other folders)
