[package]
name = "master"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_infrastructure = { path = "../common_infrastructure" }
railway_sim_map = { path = "../railway_sim_map" }
map = { path = "../map" }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
derive-where = "1.2.7"
reqwest = { version = "0.11", features = ["blocking"] }
log = { version = "0.4", default-features = false }
rouille = "3.6.2"
num-traits = "0.2"

