[package]
name = "locomotive"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"



[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"



[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.1", default-features = false }
anyhow = "1"
embedded-svc = { version = "0.26.1", default-features = false}
mfrc522 = "0.6.1"
enumset = "1.1.3"
serde = "1"
serde_json = "1"
common_infrastructure = { path = "../../common_infrastructure" }
#esp-idf-sys = { version = "0.33.3", features = ["native", "binstart"] }
#futures = "0.3"
#serde = { version = "1", default-features = false, features = ["derive"] }
#serde_json = { version = "1", default-features = false, features = ["alloc"] }
#postcard = "1"

[build-dependencies]
embuild = "0.31.3"